--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hello</title>
 </head>
 <body>
-    <h1>Hello Word </h1>
+    <h1> Yasir Ashaam </h1>
     <h2>Welcome to my Website!</h2>
+    
 </body>
 </html>
