github change check

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1> Yasir Ashaam </h1>
+    <h1> Yasir Ashaam github </h1>
     <h2>Welcome to my Website!</h2>
     
 </body>
