Save the file with ctrl + s and then commit repo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1 style="color: red (195, 236, 9);"> Yasir Ashaam</h1>
+    <h1 style="color: red;"> Yasir Ashaam</h1>
     <h2>Welcome to my Website!</h2>
 </body>
 </html>
